--- a/docs/Makefile
+++ b/docs/Makefile
@@ -21,21 +21,18 @@ rm-crud:
 
 html: rm-crud
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
-	@echo
-	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+
+coverage: rm-crud
+	$(SPHINXBUILD) -b coverage $(ALLSPHINXOPTS) $(BUILDDIR)/coverage
 
 livehtml: html
 	livereload $(BUILDDIR)/html -p 33234
 
 dirhtml: rm-crud
 	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
-	@echo
-	@echo "Build finished. The HTML pages are in $(BUILDDIR)/dirhtml."
 
 singlehtml: rm-crud
 	$(SPHINXBUILD) -b singlehtml $(ALLSPHINXOPTS) $(BUILDDIR)/singlehtml
-	@echo
-	@echo "Build finished. The HTML page is in $(BUILDDIR)/singlehtml."
 
 # cp README_build.md $(BUILDDIR)/html/README.md
 deploy: clean html
